iRedMail-0.9.4:
    * New scripts:
        - tools/fail2ban_unban_ip.sh. Used to unban specified IP addresses
          from ALL fail2ban jails.

    * Fixed issues:
        - Not correctly set MySQL/PostgreSQL bind address, and SOGo bind
          address inside FreeBSD jail.
        - Use only 2 DNSBL services in postscreen service:
          zen.spamhaus.org, b.barracudacentral.org.
        - Cannot use specified MySQL root password on command line while
          installing with remote MySQL server.

    * Updated packages:
        + Roundcube webmail -> 1.1.4
        + uwsgi -> 2.0.12 (OpenBSD only)

iRedMail-0.9.3:
    * Works on new distribution releases:
        - Ubuntu 15.10. [Note: old 15.04 is not supported.]
        - OpenBSD 5.8. Notes:
            + 5.7 and earlier releases are not supported.
            + spamd(8) is not enabled and replaced by postscreen, because
              postscreen is better to reduce spam (e.g. with help of DNSBL
              services).

    * Remove components:
        - Cluebringer has been removed. It's not under active development and
          no new release since 2013 (the latest stable release doesn't support
          IPv6), we have greylisting and throttling support in iRedAPD as
          replacement.

    * Improvements:
        - SOGo Groupware is now available on FreeBSD.
        - Enable HSTS (HTTP Strict Transport Security) in both Apache and Nginx.
        - Update Fail2ban filter to catch postscreen log.
        - Enable global address book for SQL backends in SOGo by default,
          domains are isolated. Thanks dnwahs <shawn _at_ mcsp.net> for the
          sharing in iRedMail forum.
        - Supports per-user alias address in SQL backends. 2 new sql columns
          are required: `alias.is_alias`, `alias.alias_to`.
        - Enable postscreen service in Postfix by default.
          Important Note: all users must use port 587 for sending email, port